@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX clamav-0.97-nls.patch 269 RMD160 038abf3964f555f909a33b627546a3260479f356 SHA1 c9bc151ff7c029718feae91f6e0d0f6b25bea337 SHA256 088b9edcdb678ce9c072042cf51266e061ab5f5ab0e8e42bd953242138c64fd1
 AUX clamav-milter.README.gentoo 1124 RMD160 4fb1e2d9b444874838bcea1071969ca6862fb15b SHA1 0b9b86a0e7732eaaf7f880859265754f7a4efd3a SHA256 5e7b142b68964bc3463b077e5698fa77cace45ea9612258b1e1849cee944dd11
 AUX clamav.logrotate 355 RMD160 f59cd8ce96da8210aa858ee59ee3b6940e3253a6 SHA1 5fbd9364997400681d5a93cb50cac8a0f188e56f SHA256 ab91f784d5098d2162be9277e3a006bdb392d9d89975838ad4ac7dfd8b418170
@@ -5,7 +8,14 @@ AUX clamd.conf 234 RMD160 b517b05e587637cbdd443f7ca3625d582e32722f SHA1 564b1e2f
 AUX clamd.rc 2847 RMD160 883fcfeec1c5da6d3478c8591e0381265b8ded5b SHA1 93bc09b2c81c23f8fd6134c54882b070ddffdabb SHA256 f245a57ac69f3f3c51381f958a23f0fd9941744ec6a262767d0d4f2414af10e9
 DIST clamav-0.97.3.tar.gz 45793398 RMD160 9fee55f0b115fafa622e1092483e380afd0dc5b9 SHA1 263c7b8b7dc1536652ab64e32263d1c60e138655 SHA256 3a8cece5b7e6b15410f6b8f96ff5591b2c5a72f290ee8a28fefda44cb5ae7aba
 DIST clamav-0.97.4.tar.gz 48386114 RMD160 a8da7621d6c8bce05adf2521f082b3e5e94dd9e1 SHA1 56f90cf8a73acba8f97beca86b42c65c3923935d SHA256 958dd09c9da9ceb50c9e556b3ced9cbdf40e836d2bdc98286ce96e84fd4a5a53
-EBUILD clamav-0.97.3.ebuild 3625 RMD160 2bc33da8c7efde2e9c0bfc549250e75a3b7502a4 SHA1 6bf955e05070e45a0c2947e85225cc3f545d079e SHA256 a6b970699df22b83b51ab603314bd6d64e29fbd4dc0c76c96ace4981320c7303
-EBUILD clamav-0.97.4.ebuild 3632 RMD160 6a7ce1250bb339b6cbfe9cce7d77437a76cff8b0 SHA1 666b8058d4815ebb82e6af423f65643041eb03db SHA256 181505a03517e8ee257fe79d6f7d857fb7b21e359cf594f472a70ee9df76e21e
-MISC ChangeLog 61077 RMD160 bfc6773e4c072059c6ddee626fd1e2036f85b0da SHA1 da182f261193ab42166772d7162aabc25b8ed4df SHA256 fe1cf37d2aed67e87a6e1a0d071578bc0bea8de07df624c6fbf523c821f72248
+EBUILD clamav-0.97.3.ebuild 3631 RMD160 879b42ff44465b1b45b676975d9d86fb5833ddd4 SHA1 13af6ed4597a32108ddefb86c1301c0a2cea76e3 SHA256 50f6f775d254bc9c85689ad22b7cdf262ea87c0da9e88d680c85360415b2d6e4
+EBUILD clamav-0.97.4.ebuild 3638 RMD160 13bc9f02c1fce872800b2a0ef792ea6ec1e27711 SHA1 1f933e30f76140c3767b01da358b46ab875ecd90 SHA256 9c3b5da009c408086eb08571c605e9a3208dbbffabb15723aa2fe539ad4130ba
+MISC ChangeLog 61214 RMD160 8753ce1e438c8192a6dcf6351e9dd69362efe742 SHA1 f9c032b8d7126f02a6ac9ba2f26829f243203d1e SHA256 f666cf87af766766004b04a60664527e7dbc0184c900f7e4475e4e22b80d7529
 MISC metadata.xml 320 RMD160 3546393e30d87f0b0a2fb17e2f15f57dd8c19661 SHA1 b959e38933418e6fc818ed40cd9a4921b8c66102 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEARECAAYFAk/G3ykACgkQ/ejvha5XGaPpbACeKKDlTO2kuORQkP+tNVDTK1ZF
+1vwAoO+CNu4QJ8Sg25hCykhIvDWAO8bt
+=S55I
+-----END PGP SIGNATURE-----
