@@ -1,6 +1,10 @@
 # ChangeLog for app-antivirus/clamav
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-antivirus/cvs-repo/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.414 2012/05/02 20:14:11 jdhore Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-antivirus/cvs-repo/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.415 2012/05/31 03:01:55 zmedico Exp $
+
+  31 May 2012; Zac Medico <zmedico@gentoo.org> clamav-0.97.3.ebuild,
+  clamav-0.97.4.ebuild:
+  inherit user for enewgroup and enewuser
 
   02 May 2012; Jeff Horelick <jdhore@gentoo.org> clamav-0.97.3.ebuild,
   clamav-0.97.4.ebuild:
